// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal> -> close: closed 1`] = `
Object {
  "close": [Function],
  "id": "curls.modal.2",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Modal> -> close: open 1`] = `
Object {
  "close": [Function],
  "id": "curls.modal.2",
  "isOpen": true,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Modal> -> custom transition: closed 1`] = `
Object {
  "close": [Function],
  "id": "curls.modal.7",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Modal> -> custom transition: open 1`] = `
Object {
  "close": [Function],
  "id": "curls.modal.7",
  "isOpen": true,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Modal> -> open: closed 1`] = `
Object {
  "close": [Function],
  "id": "curls.modal.0",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Modal> -> open: open 1`] = `
Object {
  "close": [Function],
  "id": "curls.modal.0",
  "isOpen": true,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Modal> -> toggle: closed [2] 1`] = `
Object {
  "close": [Function],
  "id": "curls.modal.4",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Modal> -> toggle: closed 1`] = `
Object {
  "close": [Function],
  "id": "curls.modal.4",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Modal> -> toggle: open 1`] = `
Object {
  "close": [Function],
  "id": "curls.modal.4",
  "isOpen": true,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<ModalBox> -> as prop 1`] = `
.emotion-0 {
  position: fixed;
  margin: auto;
  left: 0;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 1000;
  visibility: hidden;
  opacity: 0;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,opacity;
  transition-property: visibility,opacity;
}

<span
  class="emotion-0"
  data-testid="modal-box"
  id="curls.modal.9"
  tabindex="0"
/>
`;

exports[`<ModalBox> -> box properties 1`] = `
.emotion-0 {
  position: fixed;
  margin: auto;
  left: 0;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 1000;
  visibility: visible;
  opacity: 1;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,opacity;
  transition-property: visibility,opacity;
  margin-bottom: 1rem;
}

<div
  class="emotion-0"
  data-testid="modal-box"
  id="curls.modal.12"
  tabindex="0"
/>
`;

exports[`<ModalBox> -> closed 1`] = `
.emotion-0 {
  position: fixed;
  margin: auto;
  left: 0;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 1000;
  visibility: hidden;
  opacity: 0;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,opacity;
  transition-property: visibility,opacity;
}

<div
  class="emotion-0"
  data-testid="modal-box"
  id="curls.modal.10"
  tabindex="0"
/>
`;

exports[`<ModalBox> -> element child 1`] = `
.emotion-0 {
  position: fixed;
  margin: auto;
  left: 0;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 1000;
  visibility: visible;
  opacity: 1;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,opacity;
  transition-property: visibility,opacity;
}

<div
  class="emotion-0"
  data-testid="modal-box"
  id="curls.modal.13"
  tabindex="0"
>
  <div />
</div>
`;

exports[`<ModalBox> -> open 1`] = `
.emotion-0 {
  position: fixed;
  margin: auto;
  left: 0;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 1000;
  visibility: visible;
  opacity: 1;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,opacity;
  transition-property: visibility,opacity;
}

<div
  class="emotion-0"
  data-testid="modal-box"
  id="curls.modal.11"
  tabindex="0"
/>
`;
